--- a/assets/templates/manage-footer-sets.html.tmpl
+++ b/assets/templates/manage-footer-sets.html.tmpl
@@ -12,7 +12,7 @@
         </div>
 
         <h1>Manage Footer Plug Sets</h1>
-        <table>
+        <table class="data-table">
             <thead>
                 <tr>
                     <th>Name</th>
