--- a/assets/templates/slash.html.tmpl
+++ b/assets/templates/slash.html.tmpl
@@ -25,7 +25,7 @@
         </div>
         {{ end }}
 
-        <table>
+        <table class="data-table">
             <thead>
                 <tr>
                     <th>Tournament</th>
