--- a/assets/templates/manage-structure.html.tmpl
+++ b/assets/templates/manage-structure.html.tmpl
@@ -13,7 +13,7 @@
 
         <h1>Manage Structures</h1>
         
-        <table>
+        <table class="data-table">
             <thead>
                 <tr>
                     <th>Name</th>
