--- a/assets/templates/view-tournament.html.tmpl
+++ b/assets/templates/view-tournament.html.tmpl
@@ -6,7 +6,7 @@
     <title>
       Irata Poker Clock: {{ .Tournament.EventName }}
     </title>
-    <link rel="stylesheet" href="/fs/irata-style.css">
+    <link rel="stylesheet" href="/fs/{{ .Theme }}-style.css">
   </head>
   
   <body class="clock-page">
