--- a/assets/templates/slash.html.tmpl
+++ b/assets/templates/slash.html.tmpl
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>{{ .SiteConfig.Name }}</title>
-    <link rel="stylesheet" href="/fs/irata-style.css">
+    <link rel="stylesheet" href="/fs/{{- .SiteConfig.Theme -}}-style.css">
 </head>
 <body>
     <div class="container">
